5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1871_1720.log
== TEST (2019-07-02 16:11:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("Notas:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("Notas:")))

soma = 0

for i in range(shape(matriz))



-- ERROR:
File "XXXX", line 8
    for i in range(shape(matriz))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("Notas:")))

soma = 0

for i in range(shape(matriz)[0]):
	



-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

matriz = array(eval(input("Notas:")))

soma = 0

for i in range(shape(matriz)[0]):
	



-- ERROR:
File "XXXX", line 12
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
